--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <a href="https://bwh8.net/aff.php?aff=40720&pid=72" target="_blank">Bandwagonhost DC9</a>
 
-<p>Banwagonhost CN2 1G DC3 $30/half-year/p>
+<p>Banwagonhost CN2 1G DC3 $30/half-year</p>
 
 <a href="https://bwh8.net/aff.php?aff=40720&pid=51" target="_blank">Bandwagonhost DC3</a>
 
