--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 <p>Banwagonhost CN2 1G DC3 $30/half-year</p>
 
 <a href="https://bwh8.net/aff.php?aff=40720&pid=57" target="_blank">Bandwagonhost DC3</a>
-
+  
+<p>Banwagonhost CN2 GIA 1G DC9 $26/Quarter was Out of Stock. You could get DC9 by this way</p>
 
 </body>
 
