--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
 <a href="https://bwh8.net/aff.php?aff=40720&pid=57" target="_blank">Bandwagonhost DC3</a>
   
 <p>Banwagonhost CN2 GIA 1G DC9 $26/Quarter was Out of Stock. You could get DC9 by this way</p>
+  
+<p>Get Banwagonhost CN2 1G DC3 $30/half-year and upgrade</p>
+<a href="https://bwh8.net/aff.php?aff=40720&pid=57" target="_blank">Bandwagonhost DC3</a>
+  
+<img src="https://github.com/10330384/bandwagonhost-Links/raw/master/setp1.jpg" />
+ 
 
 </body>
 
