--- a/index.html
+++ b/index.html
@@ -18,8 +18,12 @@
   
 <p>Get Banwagonhost CN2 1G DC3 $30/half-year and upgrade</p>
 <a href="https://bwh8.net/aff.php?aff=40720&pid=57" target="_blank">Bandwagonhost DC3</a>
+<br> 
   
 <img src="https://github.com/10330384/bandwagonhost-Links/raw/master/setp1.jpg" />
+<br> 
+  
+<img src="https://github.com/10330384/bandwagonhost-Links/raw/master/setp2.jpg" />
  
 
 </body>
