--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 <a href="https://bwh8.net/aff.php?aff=40720&pid=57" target="_blank">Bandwagonhost DC3</a>
 <br> 
   
-<img src="https://raw.githubusercontent.com/10330384/bandwagonhost-Links/master/setp1.jpg" />
+<img src="https://raw.githubusercontent.com/10330384/bandwagonhost-Links/master/setp1.jpg" width="500" height="150"/>
 <br> 
   
-<img src="https://raw.githubusercontent.com/10330384/bandwagonhost-Links/master/step2.jpg" />
+<img src="https://raw.githubusercontent.com/10330384/bandwagonhost-Links/master/step2.jpg" width="800" height="200"/>
  
 
 </body>
